[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/tests/test1.gd" type="Script" id=1]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/level/PlayerSpawner.gd" type="Script" id=3]
[ext_resource path="res://entities/button/ButtonItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/tests/Lightmap/lightmap.lmbake" type="BakedLightmapData" id=7]
[ext_resource path="res://levels/tests/slides/test slide.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/tests/info.tres" type="Resource" id=9]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/Rooms_map/Room.tscn" type="PackedScene" id=11]

[sub_resource type="GDScript" id=1]
script/source = "#here's the button code

extends WallButton


# The door instance
var door = getObject(\"Door\")
# The screen instance
var room = getObject(\"Room\")


# Called when the button is pressed
func onButtonPressed():
	# Use the open() method on the door here
	
	pass # End of the function

"

[sub_resource type="GDScript" id=2]
script/source = "#door code
extends Door 

"

[sub_resource type="GDScript" id=3]
script/source = "extends RoomMap
"

[node name="level" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 9 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="Map" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 1, 0, 536870912, 3, 0, 536870912, 5, 0, 536870912, 7, 0, 536870912, 8, 0, 536870912, 65528, 0, 536870912, 65529, 0, 536870912, 65531, 0, 536870912, 65533, 0, 536870912, 65535, 0, 536870912, 262144, 0, 537002002, 5, 1, 536870912, 7, 1, 536870912, 8, 1, 536870912, 13, 1, 536870912, 15, 1, 536870912, 65528, 1, 536870912, 65529, 1, 536870912, 65531, 1, 536870912, 262146, 1, 537002002, 262148, 1, 537002002, 262150, 1, 537002002, 262152, 1, 537395223, 327672, 1, 537002007, 327674, 1, 537002002, 327676, 1, 537002002, 327678, 1, 537002002, 1, 2, 536870912, 3, 2, 536870912, 5, 2, 536870912, 7, 2, 536870912, 8, 2, 536870912, 9, 2, 538312715, 65527, 2, 537919499, 65528, 2, 536870912, 65529, 2, 536870912, 65531, 2, 536870912, 65533, 2, 536870912, 65535, 2, 536870912, 262144, 2, 537002004, 5, 3, 536870912, 7, 3, 536870912, 8, 3, 536870912, 13, 3, 536870912, 15, 3, 536870912, 65528, 3, 536870912, 65529, 3, 536870912, 65531, 3, 536870912, 262144, 3, 537002002, 262146, 3, 537002002, 262148, 3, 537002002, 262150, 3, 537002002, 262152, 3, 537395223, 327672, 3, 537002007, 327674, 3, 537002002, 327676, 3, 537002002, 327678, 3, 537002002, 0, 4, 536870912, 1, 4, 536870912, 2, 4, 536870912, 3, 4, 536870912, 4, 4, 536870912, 5, 4, 536870912, 7, 4, 536870912, 8, 4, 536870912, 65528, 4, 536870912, 65529, 4, 536870912, 65531, 4, 536870912, 65532, 4, 536870912, 65533, 4, 536870912, 65534, 4, 536870912, 65535, 4, 536870912, 7, 5, 536870912, 8, 5, 536870912, 13, 5, 536870912, 15, 5, 536870912, 65528, 5, 536870912, 65529, 5, 536870912, 262144, 5, 537002004, 262146, 5, 537002002, 262148, 5, 537002002, 262150, 5, 537002002, 262152, 5, 537395223, 327672, 5, 537002007, 327674, 5, 537002002, 327676, 5, 537002002, 327678, 5, 537002002, 0, 6, 536870912, 1, 6, 536870912, 2, 6, 536870912, 3, 6, 536870912, 4, 6, 536870912, 5, 6, 536870912, 6, 6, 536870912, 7, 6, 536870912, 8, 6, 536870912, 9, 6, 538312715, 65527, 6, 537919499, 65528, 6, 536870912, 65529, 6, 536870912, 65530, 6, 536870912, 65531, 6, 536870912, 65532, 6, 536870912, 65533, 6, 536870912, 65534, 6, 536870912, 65535, 6, 536870912, 0, 7, 536870912, 1, 7, 536870912, 2, 7, 536870912, 3, 7, 536870912, 4, 7, 536870912, 5, 7, 536870912, 6, 7, 536870912, 7, 7, 536870912, 8, 7, 536870912, 13, 7, 536870912, 15, 7, 536870912, 65528, 7, 536870912, 65529, 7, 536870912, 65530, 7, 536870912, 65531, 7, 536870912, 65532, 7, 536870912, 65533, 7, 536870912, 65534, 7, 536870912, 65535, 7, 536870912, 262144, 7, 538181655, 262146, 7, 538181655, 262148, 7, 538181655, 262150, 7, 538181655, 262152, 7, 537395219, 327672, 7, 538181651, 327674, 7, 538181655, 327676, 7, 538181655, 327678, 7, 538181655, 0, 8, 537526310, 4, 8, 537526286, 7, 8, 537526286, 9, 8, 537526302, 65527, 8, 537526302, 65529, 8, 537526286, 65532, 8, 537526286, 1, 9, 536870912, 13, 9, 536870912, 15, 9, 536870912, 65535, 9, 536870912, 1, 11, 536870912, 13, 11, 536870912, 15, 11, 536870912, 65535, 11, 536870912, 1, 13, 536870912, 3, 13, 536870912, 5, 13, 536870912, 7, 13, 536870912, 9, 13, 536870912, 11, 13, 536870912, 13, 13, 536870912, 15, 13, 536870912, 65535, 13, 536870912, 1, 15, 536870912, 3, 15, 536870912, 5, 15, 536870912, 7, 15, 536870912, 9, 15, 536870912, 11, 15, 536870912, 13, 15, 536870912, 15, 15, 536870912, 65535, 15, 536870912, 65537, 65518, 537133060, 65539, 65518, 537133060, 65541, 65518, 537133060, 65543, 65518, 537133060, 131069, 65518, 537198596, 131071, 65518, 537133060, 1, 65519, 538312704, 3, 65519, 538312704, 5, 65519, 538312704, 7, 65519, 538312704, 65533, 65519, 538312704, 65535, 65519, 538312704, 65544, 65519, 538378244, 131068, 65519, 538247172, 1, 65521, 536870912, 3, 65521, 536870912, 5, 65521, 536870912, 7, 65521, 536870912, 9, 65521, 536870912, 11, 65521, 536870912, 13, 65521, 536870912, 15, 65521, 536870912, 65533, 65521, 538312704, 65535, 65521, 536870912, 131068, 65521, 538247172, 8, 65522, 538312740, 1, 65523, 536870912, 3, 65523, 536870912, 5, 65523, 536870912, 7, 65523, 536870912, 9, 65523, 536870912, 11, 65523, 536870912, 13, 65523, 536870912, 15, 65523, 536870912, 65533, 65523, 538312704, 65535, 65523, 536870912, 131068, 65523, 538247172, 65539, 65524, 537657348, 65541, 65524, 537657348, 65543, 65524, 537657348, 131080, 65524, 538181663, 1, 65525, 536870912, 13, 65525, 536870912, 15, 65525, 536870912, 65533, 65525, 538312704, 65535, 65525, 536870912, 65538, 65525, 538378244, 131068, 65525, 538247172, 1, 65527, 536870912, 13, 65527, 536870912, 15, 65527, 536870912, 65533, 65527, 538312704, 65535, 65527, 536870912, 65538, 65527, 538378244, 131068, 65527, 538247172, 0, 65528, 536870950, 4, 65528, 536870926, 7, 65528, 536870926, 9, 65528, 536870942, 65527, 65528, 536870942, 65529, 65528, 536870926, 65532, 65528, 536870926, 262144, 65528, 538050583, 0, 65529, 536870912, 1, 65529, 536870912, 2, 65529, 536870912, 3, 65529, 536870912, 4, 65529, 536870912, 5, 65529, 536870912, 6, 65529, 536870912, 7, 65529, 536870912, 8, 65529, 536870912, 13, 65529, 536870912, 15, 65529, 536870912, 65528, 65529, 536870912, 65529, 65529, 536870912, 65530, 65529, 536870912, 65531, 65529, 536870912, 65532, 65529, 536870912, 65533, 65529, 536870912, 65534, 65529, 536870912, 65535, 65529, 536870912, 262146, 65529, 538050583, 262148, 65529, 538050583, 262150, 65529, 538050583, 262152, 65529, 538050579, 327672, 65529, 537002003, 327674, 65529, 538050583, 327676, 65529, 538050583, 327678, 65529, 538050583, 0, 65530, 536870912, 1, 65530, 536870912, 2, 65530, 536870912, 3, 65530, 536870912, 4, 65530, 536870912, 5, 65530, 536870912, 6, 65530, 536870912, 7, 65530, 536870912, 8, 65530, 536870912, 9, 65530, 538312715, 65527, 65530, 537919499, 65528, 65530, 536870912, 65529, 65530, 536870912, 65530, 65530, 536870912, 65531, 65530, 536870912, 65532, 65530, 536870912, 65533, 65530, 536870912, 65534, 65530, 536870912, 65535, 65530, 536870912, 262144, 65530, 537002004, 7, 65531, 536870912, 8, 65531, 536870912, 13, 65531, 536870912, 15, 65531, 536870912, 65528, 65531, 536870912, 65529, 65531, 536870912, 262146, 65531, 537002002, 262148, 65531, 537002002, 262150, 65531, 537002002, 262152, 65531, 537395223, 327672, 65531, 537002007, 327674, 65531, 537002002, 327676, 65531, 537002002, 327678, 65531, 537002002, 0, 65532, 536870912, 1, 65532, 536870912, 2, 65532, 536870912, 3, 65532, 536870912, 4, 65532, 536870912, 5, 65532, 536870912, 7, 65532, 536870912, 8, 65532, 536870912, 65528, 65532, 536870912, 65529, 65532, 536870912, 65531, 65532, 536870912, 65532, 65532, 536870912, 65533, 65532, 536870912, 65534, 65532, 536870912, 65535, 65532, 536870912, 262144, 65532, 537002002, 5, 65533, 536870912, 7, 65533, 536870912, 8, 65533, 536870912, 13, 65533, 536870912, 15, 65533, 536870912, 65528, 65533, 536870912, 65529, 65533, 536870912, 65531, 65533, 536870912, 262146, 65533, 537002002, 262148, 65533, 537002002, 262150, 65533, 537002002, 262152, 65533, 537395223, 327672, 65533, 537002007, 327674, 65533, 537002002, 327676, 65533, 537002002, 327678, 65533, 537002002, 1, 65534, 536870912, 3, 65534, 536870912, 5, 65534, 536870912, 7, 65534, 536870912, 8, 65534, 536870912, 9, 65534, 538312715, 65527, 65534, 537919499, 65528, 65534, 536870912, 65529, 65534, 536870912, 65531, 65534, 536870912, 65533, 65534, 536870912, 65535, 65534, 536870912, 262144, 65534, 537002004, 5, 65535, 536870912, 7, 65535, 536870912, 8, 65535, 536870912, 13, 65535, 536870912, 15, 65535, 536870912, 65528, 65535, 536870912, 65529, 65535, 536870912, 65531, 65535, 536870912, 262146, 65535, 537002002, 262148, 65535, 537002002, 262150, 65535, 537002002, 262152, 65535, 537395223, 327672, 65535, 537002007, 327674, 65535, 537002002, 327676, 65535, 537002002, 327678, 65535, 537002002 )
}

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.2583, 2.5849, 16.5934 )
omni_range = 28.0241

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.364157, 2.5849, 1.43803 )
omni_range = 28.0241

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.02708, 0 )
extents = Vector3( 16.9827, 4.7694, 19.821 )
quality = 0
use_hdr = false
light_data = ExtResource( 7 )

[node name="PlayerSpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04052, 5.50749 )
script = ExtResource( 3 )

[node name="Slider" parent="." instance=ExtResource( 5 )]
slide_scenes = [ ExtResource( 8 ) ]

[node name="Button" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.29276, 2.14597, -7.68596 )
code = SubResource( 1 )
display_name = "Button "
is_programmable = true
is_interactable = true
interaction_message = "Press to open the door"
connect_pressed = true

[node name="Computer" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.608288, 0 )

[node name="Doortest" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.660283, 0, 0, 0, 1.01551, 0, 0, 0, 1, 0.457316, 0.575494, -7.22597 )
code = SubResource( 2 )
display_name = "Door"
is_programmable = true
locked = true

[node name="DoorSingle" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.20001, 0.556702, -13.4977 )
is_interactable = true

[node name="ButtonLoopTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Room" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.53826, 2.755, -7.73052 )
code = SubResource( 3 )
display_name = "Room"
is_programmable = true
locked = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="interact" from="Doortest" to="." method="_on_Door_interact"]
[connection signal="opened" from="Doortest" to="." method="_on_Door_opened"]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
